--- a/book.css
+++ b/book.css
@@ -10,17 +10,13 @@ h1 {
 	margin: 0;
 	padding: .25em;
 	font-size: 200%;
-	color: navy;
+	color: red;
 }
 img  {
-	float: left;
+	float: right;
 	margin: 0 1em;
 }
 p {
 	margin: 0;
 	padding-bottom: .5em;
-}
-#service {
-	clear: both;
-	padding-top: .5em;
 }
